--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
-user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\MT\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
